# SideProjects

./: README.md
database-api/: .env  Cargo.toml
database-api/container/: Dockerfile  build_docker.sh  run_docker.sh  stop_docker.sh
database-api/src/: main.rs
workout-webpage/: README.md  angular.json  package-lock.json  package.json
workout-webpage/src/: index.html  main.ts
workout-webpage/src/app/: app.component.html  app.component.spec.ts  app.component.ts
workout-webpage/src/app/daily-workout/: daily-workout.component.html  daily-workout.component.scss  daily-workout.component.spec.ts  daily-workout.component.ts
workout-webpage/src/assets/: workout-history.json
